Modified project settings

--- a/project.config
+++ b/project.config
@@ -36,3 +36,5 @@
 	pushTag = group user/tboneteen18
 	pushSignedTag = group DPL-Attendance_tracker
 	pushSignedTag = group user/tboneteen18
+[receive]
+	requireChangeId = true
