Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,21 +3,36 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group DPL-Attendance_tracker
 	owner = group user/tboneteen18
 [access "refs/for/refs/*"]
+	read = group DPL-Attendance_tracker
 	read = group user/tboneteen18
+	push = group DPL-Attendance_tracker
 	push = group user/tboneteen18
+	label-Code-Review = -2..+2 group DPL-Attendance_tracker
 	label-Code-Review = -2..+2 group user/tboneteen18
+	label-Verified = -1..+1 group DPL-Attendance_tracker
 	label-Verified = -1..+1 group user/tboneteen18
+	rebase = group DPL-Attendance_tracker
 	rebase = group user/tboneteen18
+	removeReviewer = group DPL-Attendance_tracker
 	removeReviewer = group user/tboneteen18
+	submit = group DPL-Attendance_tracker
 	submit = group user/tboneteen18
 [access "refs/heads/*"]
+	read = group DPL-Attendance_tracker
 	read = group user/tboneteen18
+	create = group DPL-Attendance_tracker
 	create = group user/tboneteen18
+	push = group DPL-Attendance_tracker
 	push = +force group user/tboneteen18
+	pushMerge = group DPL-Attendance_tracker
 	pushMerge = group user/tboneteen18
 [access "refs/tags/*"]
+	push = group DPL-Attendance_tracker
 	push = +force group user/tboneteen18
+	pushTag = group DPL-Attendance_tracker
 	pushTag = group user/tboneteen18
+	pushSignedTag = group DPL-Attendance_tracker
 	pushSignedTag = group user/tboneteen18
